tests/NormalTests/paczka1/fuzzy1/10299839.err
Error in line 1: DO0 A288 44,4
Error in line 9: 775 A288 13,0
Error in line 4: ZZC S775 25,0
Error in line 2: S775 S562 80,1
Error in line 10: ZZC A288 76,7
Error in line 26: S775 A288 338,2
Error in line 28: gHkme8 A987 167,6
